fix component docs on mobile

--- a/less/docs.less
+++ b/less/docs.less
@@ -1301,6 +1301,10 @@ table {
   }
 }
 
+.docs-column {
+  overflow-y: hidden;
+}
+
 
 .index-content {
   padding: 20px;
